feat: modifications to the end function

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Snake Game</title>
+    <title>Firas Chabchoub</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
